[tool.poetry]
name = "cryptopals"
version = "0.0.0"
description = "Cryptopals problems worked out"
authors = ["Bart Kastermans <kasterma@kasterma.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bandit = "^1.7.5"
black = "^22.12.0"
hypothesis = "^6.97.1"
pytest = "^7.4.2"
safety = "^2.3.5"
isort = "^5.12.0"
python-language-server = "^0.36.2"
pycryptodome = "^3.19.0"
cryptography = "^41.0.4"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
pwntools = "^4.11.0"
scipy = "^1.11.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
markers = ["wip: work in progress; to mark the current set of tests being worked on"]

[tool.isort]
line_length = 120
