[tool.poetry]
name = "cryptopals"
version = "0.0.0"
description = "Cryptopals problems worked out"
authors = ["Bart Kastermans <kasterma@kasterma.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bandit = "^1"
black = "^24"
hypothesis = "^6"
pytest = "^8"
safety = "^3"
isort = "^6"
python-language-server = "^0"
pycryptodome = "^3"
cryptography = "^44"
pandas = "^2"
matplotlib = "^3"
pwntools = "^4"
scipy = "^1"
jwt = "^1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4"
icecream = "^2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
markers = ["wip: work in progress; to mark the current set of tests being worked on"]

[tool.isort]
line_length = 120
